# koven-platform

./: .clang-format  .dockerignore  README.md
docker/: compose.yaml
docker/koven/: Dockerfile
docker/mqtt/: Dockerfile
docker/platform/: Dockerfile
koven/: CMakeLists.txt  README.md  koven.c  koven.h  main.c  mqtt_client.c  mqtt_client.h  protocol.c  protocol.h
koven/tests/: test_koven.c  test_protocol.c
platform/: README.md  go.mod  main.go
platform/internal/mqtt/: mqtt.go
platform/internal/protocol/: protocol.go  protocol_test.go
platform/internal/service/: hub.go  hub_test.go  service.go  service_test.go  websocket.go
platform/internal/service/web/: index.html
platform/internal/service/web/static/: site.css  site.js
